{{$NEXT}}

0.005     2014-12-09 18:05:21-05:00 America/New_York
  - Enable allow_unknown option
  - Update docs regarding handling of unblessed references
  - Restore tests related to scalar references

0.004     2014-12-05 12:30:04-05:00 America/New_York
  - Removed Test::Without::Module testing dependency

0.003     2014-11-30 22:53:18-05:00 America/New_York
  - Cleaned up tests and imports

0.002     2014-11-30 18:52:20-05:00 America/New_York
  - Improved testing for JSON::XS and JSON::PP

0.001     2014-11-30 02:27:46-05:00 America/New_York
  - First release