@@ -290,22 +290,26 @@ ok !false, 'false';
 is false, 0, 'right string value';
 is false + 0, 0, 'right numeric value';
 
-# Upgraded numbers
-my $num = 3;
-my $str = "3";
-is encode_json({test => [$num, $str]}), '{"test":[3,"3"]}',
-  'upgraded number detected';
-$num = 3.21;
-$str = "3.21";
-is encode_json({test => [$num, $str]}), '{"test":[3.21,"3.21"]}',
-  'upgraded number detected';
-$str = '0 but true';
-$num = 1 + '0 but true';
-is encode_json({test => [$num, $str]}), '{"test":[1,"0 but true"]}',
-  'upgraded number detected';
+if (Mojo::JSON::MaybeXS::JSON eq 'Cpanel::JSON::XS'
+  and $Cpanel::JSON::XS::VERSION >= 3.0108) {
+	# Upgraded numbers
+	my $num = 3;
+	my $str = "$num";
+	is encode_json({test => [$num, $str]}), '{"test":[3,"3"]}',
+	  'upgraded number detected';
+	$num = 3.21;
+	$str = "$num";
+	is encode_json({test => [$num, $str]}), '{"test":[3.21,"3.21"]}',
+	  'upgraded number detected';
+	$str = '0 but true';
+	$num = 1 + $str;
+	is encode_json({test => [$num, $str]}), '{"test":[1,"0 but true"]}',
+	  'upgraded number detected';
+}
 
 # Upgraded string
-$str = "bar";
+my $str = "bar";
+my $num;
 { no warnings 'numeric'; $num = 23 + $str }
 is encode_json({test => [$num, $str]}), '{"test":[23,"bar"]}',
   'upgraded string detected';
@@ -321,11 +325,14 @@ is encode_json($mixed), '[3,"three","3",0,"0"]',
 is encode_json($mixed), '[3,"three","3",0,"0"]',
   'all have been detected correctly again';
 
-# "inf" and "nan"
-#like encode_json({test => 9**9**9}), qr/^{"test":".*"}$/,
-#  'encode "inf" as string';
-#like encode_json({test => -sin(9**9**9)}), qr/^{"test":".*"}$/,
-#  'encode "nan" as string';
+if (Mojo::JSON::MaybeXS::JSON eq 'Cpanel::JSON::XS'
+  and $Cpanel::JSON::XS::VERSION >= 3.0108) {
+	# "inf" and "nan"
+	like encode_json({test => 9**9**9}), qr/^{"test":(null|".*")}$/,
+	  'encode "inf" as null or string';
+	like encode_json({test => -sin(9**9**9)}), qr/^{"test":(null|".*")}$/,
+	  'encode "nan" as null or string';
+}
 
 # "null"
 is j('null'), undef, 'decode null';
